Fix spacing for tablet view

--- a/app/assets/stylesheets/carousel.scss
+++ b/app/assets/stylesheets/carousel.scss
@@ -6,7 +6,17 @@
   }
 
   @media only screen and (min-device-height: 1000px) {
-    margin-top: 8.4vh;
+    margin-top: 10.4vh;
+    .image{
+      img{
+        width: 60%;
+      }
+    }
+  }
+
+
+  @media only screen and (max-device-width: 1200px) {
+    margin-top: 30vh;
     .image{
       img{
         width: 60%;
